Fixed a tag not working for z-index settings

--- a/assets/sass/general/_header.scss
+++ b/assets/sass/general/_header.scss
@@ -37,7 +37,7 @@ header {
 .header-shadow {
   @include header-common;
   box-shadow: $header-shadow;
-  z-index: 0;
+  z-index: 1;
   @include media('<tablet') {
     display: none;
   }
